# jenkins-project

./: .gitignore  CMakeLists.txt  Jenkinsfile  build.groovy
pkg/: jenkins-project.spec
src/: main.cpp  math.cpp  test_math.cpp
